0.6.0
 * Support for pipes to self
 * Better support for UNIX sockets
 * Rudimentary support for Gtk+ applications
 * Lots of refactoring for portability
 * Don't depend on finding a syscall before needing a remote syscall

0.5.3
 * Compile fix for older versions of binutils

0.5.2
 * Fix more AMD64 issues.
 * Always build stubs with dietlibc.
 * Only build needed portion of file I/O.

0.5.1
 * Fix buggy remote syscalls on AMD64.
 * Force real_main to be noinline.
 * Properly deal with processes with no heap.
 * Fix FS/GS handling (for static binaries, etc).
 * Properly pad out checksums.

0.5.0
 * AMD64 support.
 * Seek to end of file if we started off there (eg, logfiles).
 * Remove unused/unimplemented flags from getopt.
 * Enable linking against uclibc.