@@ -122,11 +122,17 @@ int is_a_syscall(unsigned long inst, int canonical)
 int is_in_syscall(pid_t pid, struct user *user)
 {
     long inst;
+
+    /* If it's in the vsyscall DSO, we've most likely interrupted a syscall. */
+    if (user->regs.eip >= vdso_start && user->regs.eip < vdso_end)
+	return 1;
+
     inst = ptrace(PTRACE_PEEKDATA, pid, user->regs.eip-2, 0);
     if (errno) {
 	perror("ptrace(PEEKDATA)");
 	return 0;
     }
+
     return is_a_syscall(inst, 0);
 }
 
