@@ -4,6 +4,7 @@
  * Rudimentary support for Gtk+ applications
  * Lots of refactoring for portability
  * Don't depend on finding a syscall before needing a remote syscall
+ * Support for syscalls via vsyscall DSO
 
 0.5.3
  * Compile fix for older versions of binutils
